2012-07-20 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V01-19-36
	* sending time since last report to the iDie

2012-07-10 Srecko Morovic <srecko.morovic@cern.ch>

	* V01-19-35
	* CPUStat sends cpu usage info from /proc/stat

2012-05-29 Srecko Morovic <srecko.morovic@cern.ch>

	* V01-19-34
	* 5 seconds Curl post timeout 
	* note: V01-19-33 contains "Use constexpr in place of static" fix

2012-05-23 Srecko Morovic <srecko.morovic@cern.ch>

	* V01-19-32
	* fixes to the exceptionGeneratorTest

2012-05-16 Srecko Morovic <srecko.morovic@cern.ch>

	* V00-19-31
	* added test 13: invalid free (heap corruption)
	* scripts/exceptionGeneratorTest for ExceptionGenerator

2012-05-15 Srecko Morovic <srecko.morovic@cern.ch>

	* V00-19-30
	* update beginRun to latest framework definition

2012-05-15 Srecko Morovic <srecko.morovic@cern.ch>

	* V00-19-29
	* ExceptionGenerator updated:
	* timed segfault (type 12), improved cgi parameter handling
	* added virtual function to compile properly

2012-05-10 Srecko Morovic <srecko.morovic@cern.ch>

	* V00-19-27
	* adding new message type
	* when receiving it, slave will set core dump size to 0

2012-05-02 Srecko Morovic <srecko.morovic@cern.ch>

	* V00-19-26
	* moving updates from NewGUIandQueue into trunk

2012-04-30 Srecko Morovic <srecko.morovic@cern.ch>
	* V00-19-25
	* moved ShmOutputModuleRegistry to Modules

2012-04-27 Srecko Morovic <srecko.morovic@cern.ch>

	* V00-19-24
	* fill ascii chart directly from deque elements,
	  it is not guaranteed to be contiguous in memory

2012-04-22 Srecko Morovic <srecko.morovic@cern.ch>

	* V00-19-22
	* updated ShmOutputModule interfaces
	* support for nExpectedEPs in I2O header

2012-04-16 Srecko Morovic <srecko.morovic@cern.ch>
	* tag V00-19-21-04
	* part of changes for FU performing fork from edm::EventProcessor
	* new interfaces to ModuleWeb components (for DaqSource) and
	ShmOutputModule

2011-10-21  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-19-20
	* fix crash of Vulture