@@ -1,3 +1,9 @@
+2012-09-02 Srecko Morovic <srecko.morovic@cern.ch>
+
+	* tag V02-19-37
+	* dataset reporting support, added secondary legenda type to
+	CurlPoster
+
 2012-07-20 Srecko Morovic <srecko.morovic@cern.ch>
 
 	* tag V01-19-36
